Small fix on header spacing

--- a/src/_sass/_breakpoints.scss
+++ b/src/_sass/_breakpoints.scss
@@ -6,7 +6,7 @@ $grid-breakpoints: (
 	sm: 544px,
 	md: 768px,
 	lg: 992px,
-	xl: 1200px
+	xl: 1280px
 ) !default;
 
 // Name of the next breakpoint, or null for the last breakpoint.
